cli/tests/testdata/run/unstable_disabled.out
[WILDCARD]
error: TS2339 [ERROR]: Property 'umask' does not exist on type 'typeof Deno'. 'Deno.umask' is an unstable API. Did you forget to run with the '--unstable' flag?
console.log(Deno.umask);
                 ~~~~~
    at [WILDCARD]/unstable.ts:1:18
